--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           RESPONSE=`curl -X GET -H "Accept: application/json" -H "Content-Type: application/json" \
           https://hub.dummyapis.com/employee?noofRecords=1&idStarts=10`
-          echo "$TOKEN" 
+          echo "$RESPONSE" 
  #     - name: Deploy Web App
  #       run: |
  #         curl -X POST -H "Accept: application/json" -H "Content-Type: application/json" \
