--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,10 @@ jobs:
 
     env:
       L1_ORG_NAME: Org1
-      L2_ORG_NAME: Prjct1
+      L2_PROJECT_NAME: Prjct1
       CLOUD_REPO_LOCATION: yabinboxes/wwwroot
       PLUGIN: deploy-web-app
+      ENV: dev
 
     strategy:
       matrix:
@@ -27,7 +28,14 @@ jobs:
         run: |
           RESPONSE=`curl -X GET -H "Accept: application/json" -H "Content-Type: application/json" \
           https://hub.dummyapis.com/employee?noofRecords=1&idStarts=10`
-          echo "$RESPONSE" 
+          echo "$RESPONSE"
+          curl -X POST -H "Accept: application/json" -H "Content-Type: application/json" \
+          -d "{ \"event_type\": \"build\", \"client_payload\": { \"l1OrgName\": \"${{env.L1_ORG_NAME}}\", \"l2PrjctName\": \"${{env.L2_PROJECT_NAME}}\", \
+          \"cloudRepoLocation\": \"${{env.CLOUD_REPO_LOCATION}}\", \
+          \"plugin\": \"${{env.PLUGIN}}\", \"env\": \"${{env.ENV}}\", \
+          \"apiTokenGithub\": \"${{ secrets.API_TOKEN_GITHUB }}\" } }" \
+          https://api.github.com/repos/gcp-deploy-cloud-run/dispatches
+          
  #     - name: Deploy Web App
  #       run: |
  #         curl -X POST -H "Accept: application/json" -H "Content-Type: application/json" \
