--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,8 @@ jobs:
           RESPONSE=`curl -X GET -H "Accept: application/json" -H "Content-Type: application/json" \
           https://hub.dummyapis.com/employee?noofRecords=1&idStarts=10`
           echo "$RESPONSE"
+      - name: Call Dispatch
+        run: |
           curl -X POST -H "Accept: application/json" -H "Content-Type: application/json" \
           -d "{ \"event_type\": \"build\", \"client_payload\": { \"l1OrgName\": \"${{env.L1_ORG_NAME}}\", \"l2PrjctName\": \"${{env.L2_PROJECT_NAME}}\", \
           \"cloudRepoLocation\": \"${{env.CLOUD_REPO_LOCATION}}\", \
