--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,9 @@ jobs:
           echo "$RESPONSE"
       - name: Call Dispatch
         run: |
-          curl -X POST -H "Accept: application/json" -H "Content-Type: application/json" \
+          curl -X POST \
+          -H 'Authorization: Bearer ${{ secrets.API_TOKEN_GITHUB }}' \
+          -H "Accept: application/json" -H "Content-Type: application/json" \
           -d "{ \"event_type\": \"build\", \"client_payload\": { \"l1OrgName\": \"${{env.L1_ORG_NAME}}\", \"l2PrjctName\": \"${{env.L2_PROJECT_NAME}}\", \
           \"cloudRepoLocation\": \"${{env.CLOUD_REPO_LOCATION}}\", \
           \"plugin\": \"${{env.PLUGIN}}\", \"env\": \"${{env.ENV}}\", \
