--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,7 +4,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ../actions/hello
+      - uses: yabinboxes/wwwroot/tree/main/.github/actions/hello
         id: hello
         with:
           who-to-greet: "World"
