--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,11 +4,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ./.github/actions/hello
+      - uses: .github/actions/hello
         id: hello
         with:
           who-to-greet: "World"
       - run: |
           echo "Time: ${{ steps.hello.outputs.time }}"
-
-
