--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -3,10 +3,6 @@ jobs:
   testing-action:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: ./.github/actions/hello
-        id: hello
+      - uses: yabinboxes/cloud-builder@v1
         with:
-          who-to-greet: "World"
-      - run: |
-          echo "Time: ${{ steps.hello.outputs.time }}"
+          milliseconds: 1000
